--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
     <h2>Support</h2> <p>
                   </p> <p><strong>Contact Us</strong></p> <p>
-                    If you have any support, do not hesitate to contact
+                    If you want any support, do not hesitate to contact
                     us at
 
 <a href="https://twitter.com/elhaqksa">Twitter</a>, Email: elhaqinfo@gmail.com
